fix: dont allow navbar to overflow body width

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -7,6 +7,7 @@ nav {
   width: 100%;
   background: $grey2;
   justify-content: flex-start;
+  max-width: 100%;
 
   > * {
     height: 100%;
@@ -100,6 +101,7 @@ ul.nav-menu {
   margin: 0;
   padding-left: 0px;
   padding-bottom: $spacer-s;
+  max-width: 100%;
   .nav-list-item {
     padding: $spacer-xs $spacer-s;
     color: white;
